Replace NEOGEN/NEOFILTRE with advanced French modules SONOGENESE/DIFFUSAIRE
- SONOGENESE: Experimental VCO with granular fragmentation, Chebyshev topology warping, temporal skewing, and spectral bloom (up to 9x harmonic spread)
- DIFFUSAIRE: Spectral motion filter with cascaded pole contours, variable resonance modes, all-pass phase dispersion (écart), and cinematic wow/flutter modulation
- Both modules feature French labels with proper accents and experimental DSP processing
- 4HP modules matching previous aesthetic with gold/cyan color schemes

--- a/Sonogenese/Makefile
+++ b/Sonogenese/Makefile
@@ -14,7 +14,7 @@ DISTRIBUTABLES += $(wildcard presets)
 include $(RACK_DIR)/plugin.mk
 
 # Custom dev install target
-DEV_PLUGIN_DIR = "C:\Users\maxpa\AppData\Local/Rack2/plugins-win-x64/NEOFILTRE"
+DEV_PLUGIN_DIR = "C:\Users\maxpa\AppData\Local/Rack2/plugins-win-x64/Sonogenese"
 
 devinstall: all
 	mkdir -p $(DEV_PLUGIN_DIR)
@@ -22,6 +22,6 @@ devinstall: all
 	cp -f plugin.dll $(DEV_PLUGIN_DIR)/plugin.dll
 	cp -f plugin.json $(DEV_PLUGIN_DIR)/
 	cp -rf res $(DEV_PLUGIN_DIR)/
-	@echo "Dev-installed NEOFILTRE to $(DEV_PLUGIN_DIR)"
+	@echo "Dev-installed Sonogenese to $(DEV_PLUGIN_DIR)"
 
 reinstall: clean devinstall
