Transform LFO into OSCILLANCE with French theme and purple aesthetic
- Renamed module from LFO to OSCILLANCE (French-inspired name)
- French labels: Fréquence, Entrée, Porte, Sortie
- Purple/violet color scheme (#9b59d0) to complement gold (Sonogenese) and cyan (Diffusaire)
- Maintained all functionality: frequency, chaos, gate I/O
- Updated panel design with decorative accents and wave pattern
- 4HP module matching the aesthetic of other modules in the collection

--- a/Oscillance/Makefile
+++ b/Oscillance/Makefile
@@ -4,11 +4,11 @@ RACK_DIR ?= /c/Users/maxpa/Documents/RackDev/rack-sdk
  # (Removed custom default goal; use upstream plugin.mk defaults)
 
 # Plugin slug
-SLUG := LFO
+SLUG = Oscillance
 
 # Source files - must be set before including plugin.mk
 SOURCES += src/plugin.cpp
-SOURCES += src/LfoModule.cpp
+SOURCES += src/OscillanceModule.cpp
 
 # Include Rack build system
 include $(RACK_DIR)/plugin.mk
