Final refinements and documentation for French module collection
- OBF: Adjusted Porte and Sortie label positioning for optimal layout
- Added decorative accent lines and dots to Sonogenese (gold) and Diffusaire (cyan)
- Updated main README with comprehensive module descriptions
- Added detailed README files for each module (OBF, Sonogenese, Diffusaire)
- Cleaned up build artifacts and removed obsolete Oscillance folder
- All modules now feature consistent visual styling with color-coded themes
- Purple (OBF), Gold (Sonogenese), Cyan (Diffusaire)

--- a/OBF/Makefile
+++ b/OBF/Makefile
@@ -4,11 +4,11 @@ RACK_DIR ?= /c/Users/maxpa/Documents/RackDev/rack-sdk
  # (Removed custom default goal; use upstream plugin.mk defaults)
 
 # Plugin slug
-SLUG = Oscillance
+SLUG = OBF
 
 # Source files - must be set before including plugin.mk
 SOURCES += src/plugin.cpp
-SOURCES += src/OscillanceModule.cpp
+SOURCES += src/OBFModule.cpp
 
 # Include Rack build system
 include $(RACK_DIR)/plugin.mk
